--- a/css/auth.css
+++ b/css/auth.css
@@ -1,3 +1,67 @@
+body {
+	background: #E8EBEF url(../img/noise_f6f6f6.png) left top repeat;
+	font-family: Helvetica,Arial,Verdana,sans-serif;
+}
 #content {
+	background: #fff;
+	border-radius: 4px;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2);
+	margin: 70px auto 0;
+	padding: 20px;
 	width: 300px;
+}
+input {
+	background: #f4f4f4;
+	border-color: #808080 #bfbfbf #eaeaea;
+	border-radius: 3px;
+	border-style: solid;
+	border-width: 1px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3) inset;
+	color: #2A2A2A;
+	display: block;
+	font-family: Helvetica,Arial,Verdana,sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	height: 22px;
+	margin: 0 0 15px;
+	outline: medium none;
+	padding: 10px;
+	width: 278px;
+}
+input[type=submit] {
+	background: #ffd65e; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ffd65e 0%, #febf04 100%); /* FF3.6+ */
+	background: -webkit-linear-gradient(top,  #ffd65e 0%,#febf04 100%); /* Chrome10+,Safari5.1+ */
+	background: linear-gradient(top,  #ffd65e 0%,#febf04 100%); /* W3C */
+    border: 1px solid #D1A700;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.4) inset;
+	color: #2A2A2A;
+	height: 42px;
+	padding: 0;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+	width: 300px;
+}
+input:last-child {
+	margin: 0;
+}
+.btn {
+	background: #ffd65e; /* Old browsers */
+	background: -moz-linear-gradient(top,  #ffd65e 0%, #febf04 100%); /* FF3.6+ */
+	background: -webkit-linear-gradient(top,  #ffd65e 0%,#febf04 100%); /* Chrome10+,Safari5.1+ */
+	background: linear-gradient(top,  #ffd65e 0%,#febf04 100%); /* W3C */
+    border: 1px solid #D1A700;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(255, 255, 255, 0.4) inset;
+	color: #2A2A2A;
+	cursor: pointer;
+	font-family: Helvetica,Arial,Verdana,sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	height: 42px;
+	line-height: 42px;
+	margin-top: 10px;
+	padding: 0;
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
