--- a/css/match_maker.css
+++ b/css/match_maker.css
@@ -1,30 +1,36 @@
 #mm_player_pool {
-	margin-bottom: 10px;
-	width: 342px;
+	margin: 0 0 10px -10px;
+}
+#mm_player_pool img {
+	margin: 0 0 10px 10px;
 }
 #mm_matchup {
 	overflow: hidden;
-	width: 342px;
 }
 .mm_team {
 	background: #e6e6e6;
 	border-radius: 4px;
 	float: left;
 	height: 90px;
-	padding: 5px;
+	margin-bottom: 20px;
+	padding: 10px;
 	position: relative;
-	width: 156px;
+	width: 230px;
+}
+#mm_team_2 {
+	float: right;
+}
+@media (max-width: 571px) {
+	#mm_team_2 {
+		float: left;
+	}
 }
 .mm_team.error {
 	background: #FFCCC9;
 }
-.mm_team:first-child {
-	margin-right: 10px;
-}
 .mm_team_name input {
 	margin-bottom: 5px;
-	padding: 5px;
-	width: 144px;
+	width: 216px;
 }
 .error_name .mm_team_name input {
 	background: #FFCCC9;
@@ -32,15 +38,16 @@
 }
 .mm_team_players {
 	height: 50px;
-	left: 27px;
+	left: 57px;
 	position: absolute;
-	width: 120px;
+	top: 50px;
+	width: 230px;
 	z-index: 2;
 }
 .mm_drop_zone {
-	left: 27px;
+	left: 57px;
 	position: absolute;
-	top: 44px;
+	top: 50px;
 	z-index: 1;
 }
 .mm_drop_zone span {
@@ -52,7 +59,7 @@
 	font-size: 30px;
 	height: 46px;
 	line-height: 46px;
-	margin-right: 10px;
+	margin-right: 30px;
 	text-align: center;
 	width: 46px;
 }
@@ -67,5 +74,14 @@
 	color: #FF928C;
 }
 .mm_team_players .player_img {
-	margin: 0 10px 0 0;
+	margin: 0;
+}
+.mm_team_players .player_img:first-child {
+	margin-right: 30px;
+}
+#set_match.btn {
+	color: #2A2A2A;
+	display: block;
+	font-weight: bold;
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
 }
